Updated index.html and styles.css to add padding and improve layout

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
-  <meta name="author" content="webthemez">
+  <meta name="author" content="mrbriandesign">
   <title>MUKIMU 子供英会話</title>
   <!-- core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -349,7 +349,7 @@
               <li>SHARED SSL CERTIFICATE</li>
               <li><strong>10</strong> EMAIL ADDRESS</li>
               <li><strong>24/7</strong> SUPPORT</li>
-              <li class="plan-purchase"><a class="btn btn-primary" href="#">Get It Now!</a></li>
+              <li class="plan-purchase"><a class="btn btn-primary" href="#contact">Join Now!</a></li>
             </ul>
           </div>
         </div>
@@ -370,7 +370,7 @@
               <li>SHARED SSL CERTIFICATE</li>
               <li><strong>30</strong> EMAIL ADDRESS</li>
               <li><strong>24/7</strong> SUPPORT</li>
-              <li class="plan-purchase"><a class="btn btn-primary" href="#">Get It Now!</a></li>
+              <li class="plan-purchase"><a class="btn btn-primary" href="#contact">Join Now!</a></li>
             </ul>
           </div>
         </div>
@@ -391,7 +391,7 @@
               <li>SHARED SSL CERTIFICATE</li>
               <li><strong>50</strong> EMAIL ADDRESS</li>
               <li><strong>24/7</strong> SUPPORT</li>
-              <li class="plan-purchase"><a class="btn btn-primary" href="#">Get It Now!</a></li>
+              <li class="plan-purchase"><a class="btn btn-primary" href="#contact">Join Now!</a></li>
             </ul>
           </div>
         </div>
@@ -412,7 +412,7 @@
               <li>SHARED SSL CERTIFICATE</li>
               <li><strong>100</strong> EMAIL ADDRESS</li>
               <li><strong>24/7</strong> SUPPORT</li>
-              <li class="plan-purchase"><a class="btn btn-primary" href="#">Get It Now!</a></li>
+              <li class="plan-purchase"><a class="btn btn-primary" href="#contact">Join Now!</a></li>
             </ul>
           </div>
         </div>
@@ -491,7 +491,7 @@
   </section>
    <!--/#testimonials-->
 
-  <section id="-us">
+  <<section id="contact-us" style="padding-top: 100px;">
     <div class="container">
       <div class="section-header">
         <h2 class="section-title wow fadeInDown">Contact Us</h2>
@@ -500,10 +500,10 @@
         </p>
       </div>
     </div>
-  </section>
-  <!--/#contact-us-->
+</section>
+<!--/#contact-us-->
 
-  <section id="contact">
+<section id="contact">
     <div class="container">
       <div class="container contact-info">
         <div class="row">
@@ -543,8 +543,8 @@
         </div>
       </div>
     </div>
-  </section>
-  <!--/#bottom-->
+</section>
+<!--/#bottom-->
 
   <section id="access">
     <div class="container">
